--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
+    <a href="/File/DownloadPDF" class="btn btn-primary">Download PDF</a>
+    <a href="/File/DownloadExcel" class="btn btn-success">Download Excel</a>
 </div>
